--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ email: johnny@appleseed.com
 twitter_username: _HairForceOne
 github_username: mkchoi212
 
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: # the subpath of your site, e.g. /blog
 url: "https://soomin-kevin-sung.github.io/blog/" # the base hostname & protocol for your site
 
 google_analytics_id: 
