--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   개인 개발자 블로그입니다.
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "https://soomin-kevin-sung.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: ""
+twitter_username: 
 github_username:  KevinSung
 
 # Build settings
